# flow

./: .env.twilio  .gitignore  ARCHITECTURE_COMPARISON.md  BENCHMARKING.md  CF_TUNNEL_SETUP.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  DREAM_STACK_LATENCY_REPORT.md  EMOTIONAL_METADATA_BRIDGE.md  EMOTIONAL_PROSODY_ANALYSIS.md  EMOTIONAL_PROSODY_IMPLEMENTATION_STATUS.md  EXTERNAL_ACCESS.md  FOR_FRONTEND_DEVELOPER.md  FRONTEND_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  KNOWN_ISSUES.md  LATENCY_ANALYSIS.md  LATENCY_TEST_RESULTS.md  LIVEKIT_SETUP.md  LLAMA_CPP_TTS_SUMMARY.md  LOGGING_GUIDE.md  MOSS_TTS_ARCHITECTURE_FIX.md  MOSS_TTS_DEPLOYMENT_PLAN.md  MOSS_TTS_DEPLOYMENT_STATUS.md  PARALINGUISTIC_BRIDGE.md  PRODUCTION_DEPLOYMENT_PLAN.md  PUBLIC_ACCESS_GUIDE.md  QUICKSTART.md  QWEN_OMNI_STACK_GUIDE.md  README.md  START_HERE.md  START_TUNNEL.md  TELEPHONY_SETUP.md  TESTING.md  TOKEN_STREAMING_GUIDE.md  TWILIO_READY.md  TWILIO_SETUP.md  TWILIO_TESTING_GUIDE.md  VERCEL_FRONTEND.md  (+80 more)
asr/: asr_bridge_server.py  mock_asr_server.py  parakeet_asr_bridge.py  start_voxtral.sh  start_voxtral_vllm.sh  test_voxtral.py  voxtral_asr_client.py  voxtral_asr_server.py  voxtral_bridge.py  voxtral_server.py
flow-speak-ad/: App.tsx
livekit-orchestrator/: Cargo.toml
livekit-orchestrator/src/: main.rs  services.rs
livekit-server/: api_key.txt  api_secret.txt  docker-compose.yml  livekit.yaml
livekit_orchestrator/: Cargo.toml  build.rs  start.sh
livekit_orchestrator/src/: audio.rs  main.rs  services.rs
orchestrator/: .env.example  .gitignore  Cargo.toml  README.md
orchestrator/src/: agent.rs  agent.rs.patch  asr_client.rs  audio_pipeline.rs  main.rs  vad.rs
scripts/: 01-install-pytorch.sh  02-install-vllm.sh  03-download-nemotron.sh  04-test-nemotron.sh  benchmark-nemotron.py  benchmark-nemotron.sh  bootstrap-environment.sh  build-vllm.sh  deploy-production.sh  download-models.sh  fix-vllm-cuda13.sh  fix-vllm-quick.sh  install-moss-tts.sh  install-pytorch-nightly.sh  install-pytorch.sh  install-triton.sh  install-vllm.sh  setup-environment.sh  start-moss-tts-native.sh  start-moss-tts.sh  start-nemotron.sh  start-orchestrator.sh  start-voxtral-asr.sh  test-e2e-latency.py  test-full-pipeline.sh  test-latency-focused.py  test-moss-tts-load.sh  test-voice-conversation.py  view-logs.sh
sip-server/: agent-dispatcher.py  docker-compose.yml  sip-config.yml
systemd/: cloudflared-tunnel.service  livekit-orchestrator-streaming.service  moss-tts.service  nemotron-llm.service  telephony-orchestrator.service  voxtral-asr.service
token-server/: README.md  server.py  start.sh  token_api.py  token_api_fixed.py
token-server-rust/: Cargo.toml
tts/: moss_tts_fastapi_server.py  moss_tts_server.py  moss_tts_streaming_handler.py  moss_tts_token_handler.py  moss_tts_websocket.py  moss_tts_websocket_handler.py  moss_tts_websocket_handler.py.shape_backup
web-client/: debug.html  index.html  index.html.backup  livekit.html  test_audio.html
web-root/: index.html  web-client.html
web-root/web-client/: index.html
