[package]
name = "telephony-orchestrator"
version = "0.1.0"
edition = "2021"
authors = ["Native Logic Technologies <dev@native-logic-technologies.com>"]
description = "High-performance LiveKit Telephony Orchestrator for DGX Spark"
license = "MIT OR Apache-2.0"
repository = "https://github.com/native-logic-technologies/flow"

[dependencies]
# Async runtime - optimized for high concurrency
tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }

# WebSocket for Voxtral ASR realtime API
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# HTTP client for LLM and TTS APIs
reqwest = { version = "0.12", features = ["stream", "json"] }

# ONNX Runtime for Silero VAD (Zero Python)
ort = "2.0.0-rc.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
bytes = "1.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
base64 = "0.22"

# Configuration
dotenvy = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true
